I added the alt attribute to the img tags

--- a/personal.html
+++ b/personal.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <section id="main">
-        <img src="illustration-intro.png">
+        <img src="illustration-intro.png" alt="first image">
         <article id="h1" class="captions">
             <h1>All your files in one secure location, accessible anywhere.</h1>
             <p>Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
@@ -30,8 +30,8 @@
     </section>
 
     <br>
-    <img class="top-images" src="Shared Image.png">
-    <img class="top-images" src="Shared Image 4.png">
+    <img class="top-images" src="Shared Image.png" alt="computer image">
+    <img class="top-images" src="Shared Image 4.png" alt="shield image">
     <section id="middle-con">
         <article class="top-captions" class="first-art">
                 <h3 style="padding-left: 4%;">Access your files, anywhere</h3>
@@ -42,7 +42,7 @@
                 <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files</p>
          </article>
          <br>
-        <img src="Shared Image 3.png">
+        <img src="Shared Image 3.png" alt="Time image">
         <div class="box">
             <article class="captions">
                 <h3>Real-time collaboration</h3>
@@ -50,7 +50,7 @@
             </article>
         </div>
         <br>
-        <img src="Shared Image 2.png">
+        <img src="Shared Image 2.png" alt="storage file image">
         <div class="box">
             <article class="captions">
                 <h3>Store any type of file</h3>
@@ -60,7 +60,7 @@
     </section>
     <br>
     <section id="body-img">
-        <img src="illustration-stay-productive.png">
+        <img src="illustration-stay-productive.png" alt="last image">
         <article class="captions">
             <h3>Stay productive, wherever you are</h3>
             <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
