--- a/personal.html
+++ b/personal.html
@@ -107,7 +107,7 @@
     </section>
 
     <footer>
-        <img src="logo.svg" alt="logo">
+        <img src="logo.svg" alt="logos">
         <section id="footer">
             <div>
                 <img src="icon-location.svg">
