I edited the styling

--- a/personal.html
+++ b/personal.html
@@ -34,7 +34,7 @@
     <img class="top-images" src="Shared Image 4.png" alt="shield image">
     <section id="middle-con">
         <article class="top-captions" class="first-art">
-                <h3 style="padding-left: 4%;">Access your files, anywhere</h3>
+                <h3>Access your files, anywhere</h3>
                 <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
         </article>
         <article class="top-captions" class="second-art">
