Made little change in a selector

--- a/personal.html
+++ b/personal.html
@@ -33,11 +33,11 @@
     <img class="top-images" src="Shared Image.png" alt="computer image">
     <img class="top-images" src="Shared Image 4.png" alt="shield image">
     <section id="middle-con">
-        <article class="top-captions" class="first-art">
+        <article class="top-captions">
                 <h3>Access your files, anywhere</h3>
                 <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
         </article>
-        <article class="top-captions" class="second-art">
+        <article class="top-captions">
                 <h3>Security you can trust</h3>
                 <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files</p>
          </article>
